[package]
name = "freeswitch-watchdog"
version = "0.1.4"
authors = ["Johannes Barthel <johannes.barthel@student.kit.edu>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
reqwest = { version = "0.10", features = ["blocking"] }
anyhow = "1.0.31"
senfi = { git = "https://gitlab.senfcall.de/senfcall-public/senfi.git", tag="v0.1.7" }
tokio = {features = ["full"], version = "0.2.18"}

[package.metadata.deb]
depends = "$auto, systemd"
section = "httpd"
priority = "optional"
assets = [
    ["freeswitch-watchdog.service", "/lib/systemd/system/", "644"],
    ["target/release/freeswitch-watchdog", "usr/bin/", "755"]
]
